force-app/main/default/objects/Service_Request__c/fields/EJARI_Tawteeq_number__c.field-meta.xml
<CustomField>
    <fullName>EJARI_Tawteeq_number__c</fullName>
    <label>EJARI/Tawteeq number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>