force-app/main/default/objects/Service_Request__c/fields/EJARI_Tawteeq_start_date__c.field-meta.xml
<CustomField>
    <fullName>EJARI_Tawteeq_start_date__c</fullName>
    <label>EJARI/Tawteeq start date</label>
    <type>Date</type>
</CustomField>