force-app/main/default/objects/Service_Request__c/fields/Emergency_contact_01__c.field-meta.xml
<CustomField>
    <fullName>Emergency_contact_01__c</fullName>
    <label>Emergency contact 01</label>
    <length>50</length>
    <type>Text</type>
</CustomField>