force-app/main/default/objects/Service_Request__c/fields/Emirates_ID_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_expiry_date__c</fullName>
    <label>Emirates ID expiry date</label>
    <type>Date</type>
</CustomField>