force-app/main/default/objects/Service_Request__c/fields/Emirates_ID_number__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_number__c</fullName>
    <label>Emirates ID number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>