force-app/main/default/objects/Service_Request__c/fields/MIP__c.field-meta.xml
<CustomField>
    <fullName>MIP__c</fullName>
    <label>MIP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>