force-app/main/default/objects/Service_Request__c/fields/Move_in_date__c.field-meta.xml
<CustomField>
    <fullName>Move_in_date__c</fullName>
    <label>Move-in date</label>
    <type>Date</type>
</CustomField>