force-app/main/default/objects/Service_Request__c/fields/Occupant_with_special_needs__c.field-meta.xml
<CustomField>
    <fullName>Occupant_with_special_needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occupant with special needs</label>
    <type>Checkbox</type>
</CustomField>