force-app/main/default/objects/Service_Request__c/fields/Operator_license_Exp_Dtae__c.field-meta.xml
<CustomField>
    <fullName>Operator_license_Exp_Dtae__c</fullName>
    <label>Operator license Exp Dtae</label>
    <type>Date</type>
</CustomField>