force-app/main/default/objects/Service_Request__c/fields/Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Operator_Name__c</fullName>
    <label>Operator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>