force-app/main/default/objects/Service_Request__c/fields/Operator_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Operator_Office_Number__c</fullName>
    <label>Operator Office Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>