force-app/main/default/objects/Service_Request__c/fields/Representative_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Representative_Contact_Number__c</fullName>
    <label>Representative Contact Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>