force-app/main/default/objects/Service_Request__c/fields/Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Representative_Email__c</fullName>
    <label>Representative Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>