force-app/main/default/objects/Service_Request__c/fields/Request_As__c.field-meta.xml
<CustomField>
    <fullName>Request_As__c</fullName>
    <label>Request As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Holiday Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>