force-app/main/default/objects/Service_Request__c/fields/Service_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Service_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Catalog</label>
    <referenceTo>Service_Catalog__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>