force-app/main/default/objects/Service_Request__c/fields/Special_Needs_Comments__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Comments__c</fullName>
    <label>Special Needs Comments</label>
    <type>TextArea</type>
</CustomField>