force-app/main/default/objects/Service_Request__c/fields/Total_Number_of_Child_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Child_Occupants__c</fullName>
    <label>Total Number of Child Occupants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>