force-app/main/default/objects/Service_Request__c/recordTypes/Holiday_Home_Operator.recordType-meta.xml
<RecordType>
    <fullName>Holiday_Home_Operator</fullName>
    <active>true</active>
    <label>Holiday Home Operator</label>
</RecordType>